--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "ignorePatterns": ["node_modules/", "__generated__/", ".next/", "next.config.js"],
+  "rules": {
+    "max-len": [
+      "error",
+      {
+        "code": 132
+      }
+    ],
+    "indent": [
+      "error",
+      2
+    ],
+    "object-curly-spacing" : [
+      "error",
+      "always"
+    ]
+  }
 }
