--- a/package.json
+++ b/package.json
@@ -6,19 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix --quiet",
+    "gql:codegen": "graphql-codegen --require dotenv/config --config codegen.yaml "
   },
   "dependencies": {
+    "@apollo/server": "^4.9.5",
+    "@as-integrations/next": "^3.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@graphql-tools/utils": "^10.0.11",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/lab": "^5.0.0-alpha.153",
+    "@mui/material": "^5.14.18",
+    "@mui/system": "^5.14.18",
+    "@mui/x-date-pickers": "^6.18.2",
+    "@nic-jennings/sql-datasource": "^0.0.7",
+    "@types/pg": "^8.10.9",
+    "firebase": "^10.6.0",
+    "firebase-admin": "^11.11.1",
+    "formik": "^2.4.5",
+    "graphql-tag": "^2.12.6",
+    "graphql-tools": "^9.0.0",
+    "next": "14.0.3",
+    "nodemailer": "^6.9.7",
+    "notistack": "^3.0.1",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/introspection": "^4.0.0",
+    "@graphql-codegen/typed-document-node": "^5.0.1",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "typescript": "^5"
   }
 }
