--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,11 @@
 {
   "extends": "next/core-web-vitals",
-  "ignorePatterns": ["node_modules/", "__generated__/", ".next/", "next.config.js"],
+  "ignorePatterns": [
+    "node_modules/",
+    "__generated__/",
+    ".next/",
+    "next.config.js"
+  ],
   "rules": {
     "max-len": [
       "error",
@@ -12,9 +17,18 @@
       "error",
       2
     ],
-    "object-curly-spacing" : [
+    "object-curly-spacing": [
       "error",
       "always"
+    ],
+    "array-bracket-spacing": [
+      "error",
+      "never"
+    ],
+    "quotes": ["error", "single"],
+    "semi": [
+      "error",
+      "never"
     ]
   }
 }
